--- a/app/shared/template.jade
+++ b/app/shared/template.jade
@@ -5,7 +5,7 @@ html
     title Student Directory
     link(rel='stylesheet', href='/css/style.css')
   body
-    h1 Student
+    h1 Student DataBase
     nav
       ul
         li: a(href='/') Home
