--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,5 +1,6 @@
-
+@import url(http://fonts.googleapis.com/css?family=Lobster);
 rt url(http://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans:400,300);
+@import url(http://fonts.googleapis.com/css?family=Poiret+One);
 
 body {
   font-family: 'Open Sans', sans-serif;i
@@ -7,16 +8,23 @@ body {
   box-sizing: border-box;
   margin: 60px;
 }
-h1, h2, h3 {
-  font-family: 'Merriweather', serif;
-}
 h1 {
+  font-family: 'Lobster', cursive;
   font-size: 2.5rem;
 }
+
 h2 {
+  font-family: 'Poiret One', cursive;
+  background-color: rgba(0,0,0, 0.2);
+  font-size: 30px;
+  padding: 20px;
   clear: both;
   padding-right: 80%;
   text-align: center;
+}
+
+h3 {
+  font-family: 'Merriweather', serif;
 }
 nav ul li {
   display: inline-block;
@@ -58,7 +66,7 @@ table {
 th {
   font-size: 20px;
   border-bottom: 2px solid black;
-  background-color: rgba(240, 234, 234, 0.5);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 td > a {
   text-decoration: none;
@@ -69,17 +77,22 @@ td > a:hover {
   text-decoration: none;
   color: black;
   background-color: rgba(255, 255, 255, 0.77);
-  border-radius: 60px;
+  border-radius: 10px;
 }
 td > a:visited {
   text-decoration: none;
   color: black;
 }
 td {
-  min-width: 95px;
+  min-width: 100px;
   padding: 10px 20px;
 }
 tr > td:first-child {
+  font-family: 'Merriweather', serif;
+  font-size: 20px;
+  background-color: rgba(255,255,255,0.25);
+}
+tr > td:nth-child(2){
   font-family: 'Merriweather', serif;
   font-size: 20px;
   background-color: rgba(255,255,255,0.25);
@@ -102,7 +115,7 @@ label {
   padding: 0 20px;
   width: 100px;
   display: inline-block;
-}
+} 
 input[type=text],
 input[type=date],
 input[type=number],
